react-app/src/components/Chat/Chat.css
/* todo ——————————————————————————————————————————————————————————————————————————————— */
/* todo             Message Container                   */
/* todo ——————————————————————————————————————————————————————————————————————————————— */
.message-container{
  display: flex;
  flex-direction: column;
  /* justify-content: flex-end; */
  
  height: 100%;
  overflow-y: auto;
}

/* todo ——————————————————————————————————————————————————————————————————————————————— */
/* todo             Message Writing Form                   */
/* todo ——————————————————————————————————————————————————————————————————————————————— */
#message-writer{
  position: relative;
  top: -1em;
  z-index: 5;

  background-color: #3B4248;
  border: 0.08em solid rgb(193, 193, 193);
  border-radius: 1em;
  
  width: calc(100% - 4em);
  
  padding: 1em;
  margin: 1.3em;
  margin-top: 0;
}

#writer-input{
  border: none;
  height: 4em;
  color: white;
}

.submit-message-button{
  width: 3em;
  margin-left: auto;
  /* border: solid rgb(0, 186, 59) 0.15em; */
  border: 0.08em solid rgb(193, 193, 193);
  cursor: default;
}

#send-it{
  border: 0.15em solid rgb(0, 186, 59);
  cursor: pointer; 
}

#writer-input:focus{ border: 0.08em solid rgb(193, 193, 193); };
#message-writer:hover{ border: 0.08em solid rgb(193, 193, 193); }
/* todo ——————————————————————————————————————————————————————————————————————————————— */
/* todo             Message card                   */
/* todo ——————————————————————————————————————————————————————————————————————————————— */
.message-card{
  padding-top: 1em;
  
  min-height: 6.5em;
  width: 100%;
  
  align-items: center;
  padding-left: 1.3em;
  padding-right: 1.3em;
  
  padding-bottom: 1em;
}

.message-card:hover{ background-color: rgba(60, 73, 82, 0.317); }
.message-card-header{ width: 100%; }

.message-header-mid{
  /* width: 88%; */
  width: calc(100% - 6em);
  padding-left: 8px;
  padding-right: 8px;
}

.message-header-left { width: 3em; }
.message-header-right { width: 3em; }

.message-card-image{
  height: 2.5em;
  width: 2.5em;
  border-radius: 0.2em;
  border: solid 0.05em black;
  box-shadow: 0 0 8px rgb(77, 77, 77); 
}

.message-card-content{
  width: 88%;
  margin-left: auto;
  margin-right: auto;
  overflow-wrap: break-word;
}

.message-card > * {
  margin-left: 2px;
  margin-right: 2px;
}

#left-mes{
  width: 33%;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  padding: 0;
}
#mid-mes{
  width: 33%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  padding: 0;
}
/* todo ——————————————————————————————————————————————————————————————————————————————— */
/* todo             Message Card right side                   */
/* todo ——————————————————————————————————————————————————————————————————————————————— */
.dropdown-content > * {
  background-color: inherit;
  /* padding: 1em 1em; */
  width: 2em;
  height: 2em;
  width: 50%;
}

.dropdown-content{ display: none; }
/* .dropdown-content > * { margin-right: 0.2em; } */

.message-card:hover .dropdown-content {
  display: flex;
  flex-direction: row;
  /* justify-content: space-evenly; */

  position: relative;

  right: 2em;
  top: -2em;
  z-index: 1;

  /* background-color: pink; */
}

